# Omri-Association

./: .ci_trigger  .dockerignore  .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  GOOGLE_SHEETS_SETUP.md  IMPROVEMENTS_SUMMARY.md  Makefile  Procfile  README-EN.md  README-לקוח.txt  README.md  UI_IMPROVEMENT_SUMMARY.md  UI_IMPROVEMENT_TASKS.md  UI_PROTECTION_GUIDE.md  alerts.py  almanot.xlsx  app.py  auth.py  backup.sh  cache_manager.py  config.py  dashboard.py  dashboard_clean.py  dashboard_complete.py  dashboard_final.py  dashboard_new.py  dashboard_old.py  dashboard_part1.py  dashboard_part2.py  dashboard_restored.py  dashboard_simple.py  dashboard_working.py  data_loading.py  data_processing.py  data_validation.py  data_visualization.py  (+49 more)
.streamlit/: config.toml
api/: Dockerfile  main.py  requirements.txt  run_api.py
config/: __init__.py  config.py  theme_manager.py
deployment/: omri-dashboard.service
docs/: CHANGELOG.md  QUICK_START.md  README-EN.md  README.md  TROUBLESHOOTING.md
frontend/: index.html  serve_frontend.py
modules/: __init__.py  data_loader.py  data_processor.py  graph_builder.py
omri-dashboard-frontend/: package-lock.json  package.json  vercel.json
omri-dashboard-tunnel/: app.json  package-lock.json  package.json
reports/: __init__.py  reports.py
scripts/: run_all.sh
services/: sheets.py
src/: __init__.py  alerts.py  auth.py  data_processing.py  data_visualization.py  google_sheets_io.py  widow_import.py
tests/: test_api_health.py  test_auth_module.py  test_comprehensive.py  (+21 more)
(+39 files in other folders)
