[project]
name = "omri-association"
version = "0.1.0"
description = "Omri Association dashboard and API"
requires-python = ">=3.8"

[tool.black]
line-length = 100
include = "\\.(py|pyi)$"
exclude = "\\.git|\\.venv|node_modules|omri-dashboard-frontend|omri-dashboard-web|omri-dashboard-tunnel|lib/"

[tool.isort]
profile = "black"
line-length = 100
include = "\\.(py|pyi)$"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "B", "I", "UP"]
ignore = ["E203", "E266", "E501"]
exclude = [
  "omri-dashboard-frontend",
  "omri-dashboard-web",
  "omri-dashboard-tunnel",
  "lib",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --maxfail=1"
testpaths = [
  "tests",
]
